--- a/index.html
+++ b/index.html
@@ -38,21 +38,13 @@ $(document).ready(function() {
     getAccessToken: function() {
       $.ajax({
         url: 'https://api.weixin.qq.com/cgi-bin/token',
-        beforeSend: function(xhr) {
-          xhr.setRequestHeader("Content-Type");
-          xhr.setRequestHeader("Access-Control-Allow-Origin");
-          xhr.setRequestHeader("Accept");
-         },
-        headers:{'Content-Type': 'application/json',
-"Access-Control-Allow-Origin": "*",
-'Accept': 'application/json'},
         data: {
           grant_type: 'client_credential',
           appid: 'wx47c40ae2395911a6',
           secret: '27b9f57d25694d693fa31ebe57f58550'
         },
         type: "GET",
-        dataType: "JSON",
+        dataType: "jsonp",
         success: function(result) {
           // if (result['code'] != 200) {
           // alert(result['msg']);
