--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@ $(document).ready(function() {
         type: "GET",
         dataType: "jsonp",
         success: function(result) {
+          console.log('ddddd')
+          console.log(result)
           // if (result['code'] != 200) {
           // alert(result['msg']);
           // return false;
