--- a/index.html
+++ b/index.html
@@ -36,24 +36,24 @@ $(document).ready(function() {
       self.getAccessToken();
     },
     getAccessToken: function() {
-      $.ajax({
-        url: 'https://api.weixin.qq.com/cgi-bin/token',
-        data: {
-          grant_type: 'client_credential',
-          appid: 'wx47c40ae2395911a6',
-          secret: '27b9f57d25694d693fa31ebe57f58550'
-        },
-        type: "GET",
-        dataType: "jsonp",
-        success: function(result) {
-          console.log('ddddd')
-          console.log(result)
-          // if (result['code'] != 200) {
-          // alert(result['msg']);
-          // return false;
-          // }
-        }
-      });
+      $.getJSON('https://api.weixin.qq.com/cgi-bin/token?grant_type=client_credential&appid=wx47c40ae2395911a6&secret=27b9f57d25694d693fa31ebe57f58550',function(json) {
+        console.log('ffff')
+        console.log(json)
+      })
+      // $.ajax({
+      //   url: 'https://api.weixin.qq.com/cgi-bin/token',
+      //   data: {
+      //     grant_type: 'client_credential',
+      //     appid: 'wx47c40ae2395911a6',
+      //     secret: '27b9f57d25694d693fa31ebe57f58550'
+      //   },
+      //   type: "GET",
+      //   dataType: "jsonp",
+      //   success: function(result) {
+      //     console.log('ddddd')
+      //     console.log(result)
+      //   }
+      // });
     }
   }).init();
 });
