--- a/jssdk_example.html
+++ b/jssdk_example.html
@@ -8,7 +8,7 @@
     </body>
     <script type="text/javascript" src="http://lib.sinaapp.com/js/jquery/1.9.1/jquery-1.9.1.min.js"></script>
     <script type="text/javascript" src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
-    <script type="text/javascript" src="/jssdk-config.js"></script>
+    <script type="text/javascript" src="/wechat_map/jssdk-config.js"></script>
     <script type="text/javascript">
 
         // 配置成功后执行
