--- a/jssdk_example.html
+++ b/jssdk_example.html
@@ -48,48 +48,14 @@
           type: "get",
           dataType: "json",
           success: function(data) {
-            var reslut = data.result; //通过后台返回的数据列表渲染页面，这里采用的字符串拼接的方法
-            var html = ''
-            if (reslut.length == 0) {
-              $('.siteList').remove()
-              $('.noImg').show()
-              $('.notNews').text('暂无相关信息')
-            } else {
-              $('.siteList').remove()
-              for (var i = 0; i < reslut.length; i++) {
-                html += '<div class="siteList">' +
-                  '<div class="siteBoxNull">' +
-                  '</div>' +
-                  '<ul class="siteListBox-1">' +
-                  '<li>' +
-                  '<p id="name">' + reslut[i].name + '</p>' +
-                  '<i></i>' +
-                  '</li>' +
-                  '<li>' +
-                  '<span class="first-span">' + reslut[i].address + '</span>' +
-                  '<span style="color:#333333;">' + reslut[i].distance + "km" + '</span>' +
-                  '<input type="hidden" value="' + reslut[i].longitude + '" id="longitude"/>' +
-                  '<input type="hidden" value="' + reslut[i].latitude + '" id="latitude"/>' +
-                  '</li>' +
-                  '</ul>' +
-                  '</div>'
-              }
-            }
-            $('body').append(html)
-            $('.siteList').on('click', function() { //切记IOS系统解析出来的经纬度地址是一个string类型的字符串，必选转换IOS系统才能访问
-              var longitude = Number($(this).find('#longitude').val())
-              var latitude = Number($(this).find('#latitude').val())
-              var name = $(this).find('#name').text()
-              var adress = $(this).find('.first-span').text()
-              wx.openLocation({
-                latitude: longitude, // 纬度，浮点数，范围为90 ~ -90
-                longitude: latitude, // 经度，浮点数，范围为180 ~ -180。
-                name: name, // 位置名
-                address: adress, // 地址详情说明
-                scale: 16, // 地图缩放级别,整形值,范围从1~28。默认为最大
-                infoUrl: '' // 在查看位置界面底部显示的超链接,可点击跳转
-              });
-            })
+            //使用微信内置地图查看位置接口
+				wx.openLocation({
+					latitude : data.latitude, // 纬度，浮点数，范围为90 ~ -90
+					longitude : data.longitude, // 经度，浮点数，范围为180 ~ -180。
+					name : '我的位置', // 位置名
+					address : '329创业者社区', // 地址详情说明
+					scale : 28, // 地图缩放级别,整形值,范围从1~28。默认为最大
+					infoUrl : 'http://www.gongjuji.net' // 在查看位置界面底部显示的超链接,可点击跳转（测试好像不可用）
           }
         })
       },
