--- a/jssdk_example.html
+++ b/jssdk_example.html
@@ -50,12 +50,13 @@
           success: function(data) {
             //使用微信内置地图查看位置接口
 				wx.openLocation({
-					latitude : data.latitude, // 纬度，浮点数，范围为90 ~ -90
-					longitude : data.longitude, // 经度，浮点数，范围为180 ~ -180。
+					latitude : res.latitude, // 纬度，浮点数，范围为90 ~ -90
+					longitude : res.longitude, // 经度，浮点数，范围为180 ~ -180。
 					name : '我的位置', // 位置名
 					address : '329创业者社区', // 地址详情说明
 					scale : 28, // 地图缩放级别,整形值,范围从1~28。默认为最大
 					infoUrl : 'http://www.gongjuji.net' // 在查看位置界面底部显示的超链接,可点击跳转（测试好像不可用）
+				});
           }
         })
       },
