--- a/jssdk_example.html
+++ b/jssdk_example.html
@@ -3,6 +3,7 @@
 
 <head>
   <title>微信JS-SDK获取地理位置</title>
+  <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
   <meta name="full-screen" content="yes">
   <meta name="x5-fullscreen" content="true">
