--- a/jssdk_example.html
+++ b/jssdk_example.html
@@ -10,11 +10,9 @@
 </head>
 
 <body>
-  测试
   <div id="nowAddress">
 
   </div>
-
 </body>
 <script type="text/javascript" src="http://lib.sinaapp.com/js/jquery/1.9.1/jquery-1.9.1.min.js"></script>
 <script type="text/javascript" src="http://res.wx.qq.com/open/js/jweixin-1.4.0.js"></script>
@@ -24,21 +22,21 @@
   wx.ready(function() {
 
     // 获取地理位置
-    wx.getLocation({
-      type: 'wgs84',
-      success: function(res) {
-        wx.openLocation({
-					latitude : res.latitude, // 纬度，浮点数，范围为90 ~ -90
-					longitude : res.longitude, // 经度，浮点数，范围为180 ~ -180。
-					name : '我的位置', // 位置名
-					address : '329创业者社区', // 地址详情说明
-					scale : 28, // 地图缩放级别,整形值,范围从1~28。默认为最大
-					infoUrl : 'http://www.gongjuji.net' // 在查看位置界面底部显示的超链接,可点击跳转（测试好像不可用）
-				});
-      },
-      cancel: function(res) {
-        alert('用户拒绝授权获取地理位置');
-      }
+    // wx.getLocation({
+    //   type: 'wgs84',
+    //   success: function(res) {
+    //   },
+    //   cancel: function(res) {
+    //     alert('用户拒绝授权获取地理位置');
+    //   }
+    // });
+    wx.openLocation({
+      latitude : 22.548166, // 纬度，浮点数，范围为90 ~ -90
+      longitude : 113.943555, // 经度，浮点数，范围为180 ~ -180。
+      name : '我的位置', // 位置名
+      address : '329创业者社区', // 地址详情说明
+      scale : 28, // 地图缩放级别,整形值,范围从1~28。默认为最大
+      infoUrl : 'http://www.gongjuji.net' // 在查看位置界面底部显示的超链接,可点击跳转（测试好像不可用）
     });
 
   });
