--- a/jssdk_example.html
+++ b/jssdk_example.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>微信JS-SDK获取地理位置</title>
+  <title>佛山市顺德区杏坛中学建校60周年</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
   <meta name="full-screen" content="yes">
@@ -33,8 +33,8 @@
     wx.openLocation({
       latitude : 22.786680, // 纬度，浮点数，范围为90 ~ -90
       longitude : 113.157770, // 经度，浮点数，范围为180 ~ -180。
-      name : '我的位置', // 位置名
-      address : '329创业者社区', // 地址详情说明
+      name : '停车场位置', // 位置名
+      address : '', // 地址详情说明
       scale : 28, // 地图缩放级别,整形值,范围从1~28。默认为最大
       infoUrl : 'http://www.gongjuji.net' // 在查看位置界面底部显示的超链接,可点击跳转（测试好像不可用）
     });
